@@ -595,8 +595,9 @@ public final class AuthenticationConstants {
 
         /**
          * The newest Msal-To-Broker protocol version.
+         * @see <a href="ttps://identitydivision.visualstudio.com/DevEx/_git/AuthLibrariesApiReview?path=/%5BAndroid%5D%20Broker%20API/broker_protocol_versions.md">Android Auth Broker Protocol Versions</a>
          */
-        public static final String MSAL_TO_BROKER_PROTOCOL_VERSION_CODE = computeMaxMsalBrokerProtocol();
+        public static final String MSAL_TO_BROKER_PROTOCOL_VERSION_CODE = "8.0";
 
         /**
          * A client id for requesting the SSO token.
@@ -607,27 +608,6 @@ public final class AuthenticationConstants {
          * The key indicating that this is an ssoUrl parameter in a Bundle.
          */
         public static final String BROKER_SSO_URL_KEY = "ssoUrl";
-
-        @VisibleForTesting
-        public static String computeMaxMsalBrokerProtocol() {
-            String stringVersion = BrokerContentProvider.BROKER_VERSION_1;
-            float protocolVersion = 1.0f;
-            for (final BrokerContentProvider.API api : BrokerContentProvider.API.values()) {
-                final String version = api.getMsalVersion();
-                if (version != null) {
-                    try {
-                        final float candVersion = Float.parseFloat(version);
-                        if (candVersion > protocolVersion) {
-                            protocolVersion = candVersion;
-                            stringVersion = version;
-                        }
-                    } catch (final NumberFormatException nfe) {
-                        Logger.error(TAG + ":<static initialization>", "Invalid value for protocol version", nfe);
-                    }
-                }
-            }
-            return stringVersion;
-        }
 
         /**
          * The BrokerAPI-To-Broker protocol name.
@@ -675,6 +655,11 @@ public final class AuthenticationConstants {
          * The key of negotiated broker protocol version between broker client and broker service.
          */
         public static final String NEGOTIATED_BP_VERSION_KEY = "common.broker.protocol.version.name";
+
+        /**
+         * The Boolean to send when FOCI apps are allowed to construct accounts from PRT id token in getAccounts.
+         */
+        public static final String CAN_FOCI_APPS_CONSTRUCT_ACCOUNTS_FROM_PRT_ID_TOKEN_KEY = "can.construct.accounts.from.prt.id.token";
 
         /**
          * String of broker protocol version with PRT support.
