@@ -153,58 +153,6 @@ public final class StringUtil {
     }
 
     /**
-     * The function to compare the two versions.
-     *
-     * @param thisVersion
-     * @param thatVersion
-     * @return int -1 if thisVersion is smaller than thatVersion,
-     * 1 if thisVersion is larger than thatVersion,
-     * 0 if thisVersion is equal to thatVersion.
-     */
-    public static int compareSemanticVersion(@NonNull final String thisVersion,
-                                             @Nullable final String thatVersion) {
-        if (thatVersion == null) {
-            return 1;
-        }
-
-        final String[] thisParts = thisVersion.split("\\.");
-        final String[] thatParts = thatVersion.split("\\.");
-
-        final int length = Math.max(thisParts.length, thatParts.length);
-
-        for (int i = 0; i < length; i++) {
-            int thisPart = i < thisParts.length ? Integer.parseInt(thisParts[i]) : 0;
-            int thatPart = i < thatParts.length ? Integer.parseInt(thatParts[i]) : 0;
-
-            if (thisPart < thatPart) {
-                return -1;
-            }
-
-            if (thisPart > thatPart) {
-                return 1;
-            }
-        }
-
-        return 0;
-    }
-
-    /**
-     * Returns true if the first semantic version is smaller or equal to the second version.
-     */
-    public static boolean isFirstVersionSmallerOrEqual(@NonNull final String first,
-                                                       @Nullable final String second) {
-        return compareSemanticVersion(first, second) <= 0;
-    }
-
-    /**
-     * Returns true if the first semantic version is larger or equal to the second version.
-     */
-    public static boolean isFirstVersionLargerOrEqual(@NonNull final String first,
-                                                      @Nullable final String second) {
-        return compareSemanticVersion(first, second) >= 0;
-    }
-
-    /**
      * Utility to null-safe-compare string in a case-insensitive manner.
      *
      * @param one The first string to compare.
